--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,8 @@
 ##############################
 __pycache__
 
+##############################
+## mc-moji
+##############################
+output_*.png
 
