--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 __pycache__
 
 ##############################
-## mc-moji
+## mc-moji outputs
 ##############################
-output_*.png
+*.png
 
